[package]
name = "rupid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
bytes = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
